add - Added new localizations
---

This is in preparation for the changelog finalization process.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4205,6 +4205,17 @@
     "tarikh alaintiha' 'aw alfatrat alzamania (swa'an maktubat srahtan fi nafs almakan 'aw fatarat zamaniatin, mithl 6 'ashhur 'aw sanat wahidatin)",
     "hal almuntaj almustahdaf la yuhadid tarikh aintiha' alsalahiat srahtan?",
     "'iiedadat shashat altawaqufi...",
-    "yutih lak hadha tahyiat althaqafat almustakhdamat fi shashat tawaquf altaqwimi."
+    "yutih lak hadha tahyiat althaqafat almustakhdamat fi shashat tawaquf altaqwimi.",
+    "hadad mathil takwin liltabdil 'iilayhi.",
+    "hadad altakwin",
+    "yutalbk biakhtiar mathil takwin",
+    "la yumkin altahaquq min mutaghayirat altakwin eind eadam tahdid takwin 'asasiin lilnawati.",
+    "lan yaemal takwin alnawaat bishakl sahihin. rajie musahah 'akhta' alnawaat limazid min almaelumati.",
+    "la yumkin altahaquq min mutaghayirat altakwin eind eadam tahdid mafatihi.",
+    "jari muhawalat tasjil 'iiedad mukhasas bimuhtawaa ghayr salih. rajie musahah 'akhta' alnawaat limazid min almaelumati.",
+    "jari muhawalat tasjil 'iiedad 'asasiin bimuhtawaa ghayr salih. rajae musahah 'akhta' alnawaat limazid min almaelumati.",
+    "akhtar mudkhlaan l",
+    "la yumkin tahdid altakwin",
+    "yahtawy wahid 'aw 'akthar min mudkhlat altakwin ealaa mutaghayirat 'aw taedadat ghayr salihat wayahtaj 'iilaa 'iislahi. rajie musahah 'akhta' alnawaat limazid min almaelumati."
   ]
 }
