--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4205,6 +4205,17 @@
     "保质期或跨度（明确写在同一位置或时间段，例如 6 个月或 1 年）",
     "目标产品是否未明确指定保质期",
     "屏幕保护程序设置...",
-    "这允许您配置日历屏幕保护程序使用的文化"
+    "这允许您配置日历屏幕保护程序使用的文化",
+    "选择要切换到的配置实例。",
+    "选择配置",
+    "提示您选择配置实例",
+    "未指定基本内核配置时，无法检查配置变量。",
+    "内核配置将无法正常工作。有关更多信息，请咨询内核调试器。",
+    "未指定任何键时，无法检查配置变量。",
+    "尝试注册包含无效内容的自定义设置。有关更多信息，请咨询内核调试器。",
+    "尝试注册包含无效内容的基本设置。有关更多信息，请咨询内核调试器。",
+    "选择一个条目",
+    "无法选择配置",
+    "一个或多个配置条目包含无效变量或枚举，需要修复。有关更多信息，请咨询内核调试器。"
   ]
 }
