--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4205,6 +4205,17 @@
     "bǎozhìqī huò kuàdù (míngquè xiě zài tóngyī wèizhì huò shíjiān duàn, lìrú 6 gè yuè huò 1 nián)",
     "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng bǎozhìqī",
     "Píngmù bǎohù chéngxù shèzhì...",
-    "Zhè yǔnxǔ nín pèizhì rìlì píngmù bǎohù chéngxù shǐyòng de wénhuà"
+    "Zhè yǔnxǔ nín pèizhì rìlì píngmù bǎohù chéngxù shǐyòng de wénhuà",
+    "Xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
+    "Xuǎnzé pèizhì",
+    "tíshì nín xuǎnzé pèizhì shílì",
+    "wèi zhǐdìng jīběn nèihé pèizhì shí, wúfǎ jiǎnchá pèizhì biànliàng.",
+    "Nèihé pèizhì jiāng wúfǎ zhèngcháng gōngzuò. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì.",
+    "Wèi zhǐdìng rènhé jiàn shí, wúfǎ jiǎnchá pèizhì biànliàng.",
+    "Chángshì zhùcè bāohán wúxiào nèiróng de zì dìngyì shèzhì. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì.",
+    "Chángshì zhùcè bāohán wúxiào nèiróng de jīběn shèzhì. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì.",
+    "Xuǎnzé yīgè tiáomù",
+    "wúfǎ xuǎnzé pèizhì",
+    "yīgè huò duō gè pèizhì tiáomù bāohán wúxiào biànliàng huò méi jǔ, xūyào xiūfù. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì."
   ]
 }
