--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -4205,6 +4205,17 @@
     "到期日或時段（明確寫在同一位置或時間跨度，例如 6 個月或 1 年）",
     "目標產品是否未明確指定有效期限",
     "螢幕保護程式設定...",
-    "這允許您配置日曆螢幕保護程式使用的文化"
+    "這允許您配置日曆螢幕保護程式使用的文化",
+    "選擇要切換到的配置實例。",
+    "選擇配置",
+    "提示您選擇配置實例",
+    "未指定基本內核配置時無法檢查配置變數。",
+    "內核配置將無法正常運作。請查閱內核調試器以獲取更多資訊。",
+    "當沒有指定鍵時無法檢查配置變數。",
+    "嘗試註冊具有無效內容的自訂設定。請查閱內核調試器以獲取更多資訊。",
+    "嘗試註冊具有無效內容的基本設定。查閱內核調試器以獲取更多信息",
+    "選擇一個條目",
+    "無法選擇配置",
+    "一個或多個配置條目具有無效變數或枚舉，需要修復。請查閱內核調試器以獲取更多資訊。"
   ]
 }
