--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4205,6 +4205,17 @@
     "dào qí rì huò shíduàn (míngquè xiě zài tóngyī wèizhì huò shíjiān kuàdù, lìrú 6 gè yuè huò 1 nián)",
     "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn",
     "Yíngmù bǎohù chéngshì shèdìng...",
-    "Zhè yǔnxǔ nín pèizhì rìlì yíngmù bǎohù chéngshì shǐyòng de wénhuà"
+    "Zhè yǔnxǔ nín pèizhì rìlì yíngmù bǎohù chéngshì shǐyòng de wénhuà",
+    "Xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
+    "Xuǎnzé pèizhì",
+    "tíshì nín xuǎnzé pèizhì shílì",
+    "wèi zhǐdìng jīběn nèihé pèizhì shí wúfǎ jiǎnchá pèizhì biànshù.",
+    "Nèihé pèizhì jiāng wúfǎ zhèngcháng yùnzuò. Qǐng cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō zīxùn.",
+    "Dāng méiyǒu zhǐdìng jiàn shí wúfǎ jiǎnchá pèizhì biànshù.",
+    "Chángshì zhùcè jùyǒu wúxiào nèiróng de zì dìng shèdìng. Qǐng cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō zīxùn.",
+    "Chángshì zhùcè jùyǒu wúxiào nèiróng de jīběn shèdìng. Cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō xìnxī",
+    "xuǎnzé yīgè tiáomù",
+    "wúfǎ xuǎnzé pèizhì",
+    "yīgè huò duō gè pèizhì tiáomù jùyǒu wúxiào biànshù huò méi jǔ, xūyào xiūfù. Qǐng cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō zīxùn."
   ]
 }
