--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
@@ -4144,8 +4144,8 @@
     "Verwijdert een mod van de zwarte lijst",
     "Deze configuratie-items hebben ongeldige variabelen of opsommingen en moeten worden opgelost:",
     "Start alle mods",
-    "Druk een scheidingsteken af ​​naar de console met kleur",
-    "Druk een scheidingsteken af ​​naar de console met opmaak en kleur",
+    "Druk een scheidingsteken af naar de console met kleur",
+    "Druk een scheidingsteken af naar de console met opmaak en kleur",
     "Laadt alle mods opnieuw",
     "Statistieken",
     "Toont de huidige teststatistieken",
@@ -4205,6 +4205,17 @@
     "Vervaldatum of -periode (expliciet op dezelfde plek geschreven of tijdsperioden, zoals 6 maanden of 1 jaar)",
     "Of het doelproduct de vervaldatum niet expliciet vermeldt",
     "Schermbeveiligingsinstellingen...",
-    "Hiermee kunt u de cultuur configureren die door de kalenderschermbeveiliging wordt gebruikt."
+    "Hiermee kunt u de cultuur configureren die door de kalenderschermbeveiliging wordt gebruikt.",
+    "Selecteer een configuratie-instantie om naar over te schakelen.",
+    "Configuratie selecteren",
+    "Vraagt u een configuratie-instantie te selecteren.",
+    "Kan configuratievariabelen niet controleren als er geen basiskernelconfiguratie is opgegeven.",
+    "De kernelconfiguratie werkt niet correct. Raadpleeg de kerneldebugger voor meer informatie.",
+    "Kan configuratievariabelen niet controleren als er geen sleutels zijn opgegeven.",
+    "Proberen een aangepaste instelling met ongeldige inhoud te registreren. Raadpleeg de kerneldebugger voor meer informatie.",
+    "Proberen een basisinstelling met ongeldige inhoud te registreren. Raadpleeg de kerneldebugger voor meer informatie.",
+    "Kies een item voor",
+    "Kan configuratie niet selecteren",
+    "Een of meer configuratie-items bevatten ongeldige variabelen of opsommingen en moeten worden hersteld. Raadpleeg de kerneldebugger voor meer informatie."
   ]
 }
