--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4205,6 +4205,17 @@
     "samaapti tithi ya samay avadhi (ya to ek hee sthaan par ya samay avadhi mein spasht roop se likhee gaee hai, jaise ki 6 maheene ya 1 varsh)",
     "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai",
     "skreenasevar setings...",
-    "yah aapako kailendar skreenasevar dvaara upayog kee jaane vaalee sanskrti ko konfigar karane kee anumati deta hai"
+    "yah aapako kailendar skreenasevar dvaara upayog kee jaane vaalee sanskrti ko konfigar karane kee anumati deta hai",
+    "svich karane ke lie konfigareshan instens chunen.",
+    "konfigareshan chunen",
+    "aapako konfigareshan instens chunane ke lie sanket deta hai",
+    "jab koee bes karnel konfigareshan nirdisht nahin hota hai, to konfigareshan vairiebal kee jaanch nahin kee ja sakatee.",
+    "karnel konfigareshan theek se kaam nahin karega. adhik jaanakaaree ke lie karnel deebagar se paraamarsh karen.",
+    "jab koee kunjee nirdisht nahin hotee hai, to konfigareshan vairiebal kee jaanch nahin kee ja sakatee.",
+    "amaany saamagree ke saath kastam seting panjeekrt karane ka prayaas kar raha hai. adhik jaanakaaree ke lie karnel deebagar se paraamarsh karen.",
+    "amaany saamagree ke saath bes seting panjeekrt karane ka prayaas kar raha hai. adhik jaanakaaree ke lie karnel deebagar se paraamarsh karen",
+    "ke lie ek pravishti chunen",
+    "konfigareshan ka chayan nahin kiya ja sakata",
+    "konfigareshan pravishtiyon mein se ek ya adhik mein amaany vairiebal ya gananaen hain aur unhen theek karane kee aavashyakata hai. adhik jaanakaaree ke lie karnel deebagar se paraamarsh karen."
   ]
 }
