--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
@@ -4205,6 +4205,17 @@
     "Dáta éaga nó tréimhse ama (scríofa go sainráite sa láthair chéanna nó sna tréimhsí ama céanna, amhail 6 mhí nó 1 bhliain)",
     "Cibé nach sonraítear an dáta éaga go sainráite sa sprioctháirge",
     "Socruithe spárálaíscáileáin...",
-    "Ligeann sé seo duit an cultúr a úsáideann an spárálaíscáileáin féilire a chumrú"
+    "Ligeann sé seo duit an cultúr a úsáideann an spárálaíscáileáin féilire a chumrú",
+    "Roghnaigh sampla cumraíochta le haistriú chuige.",
+    "Roghnaigh cumraíocht",
+    "Spreagann tú sampla cumraíochta a roghnú",
+    "Ní féidir athróga cumraíochta a sheiceáil nuair nach bhfuil aon chumraíocht bun-eithne sonraithe.",
+    "Ní oibreoidh cumraíocht eithne i gceart. Téigh i gcomhairle leis an dífhabhtóir eithne le haghaidh tuilleadh faisnéise.",
+    "Ní féidir athróga cumraíochta a sheiceáil nuair nach bhfuil aon eochracha sonraithe.",
+    "Ag iarraidh socrú saincheaptha a chlárú le hábhar neamhbhailí. Téigh i gcomhairle leis an dífhabhtóir eithne le haghaidh tuilleadh faisnéise.",
+    "Ag iarraidh bunsocrú a chlárú le hábhar neamhbhailí. Téigh i gcomhairle leis an dífhabhtóir eithne le haghaidh tuilleadh faisnéise",
+    "Roghnaigh iontráil le haghaidh",
+    "Ní féidir cumraíocht a roghnú",
+    "Tá athróga nó áirimh neamhbhailí ag ceann amháin nó níos mó de na hiontrálacha cumraíochta agus ní mór iad a shocrú. Téigh i gcomhairle leis an dífhabhtóir eithne le haghaidh tuilleadh faisnéise."
   ]
 }
