--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4205,6 +4205,17 @@
     "有効期限または期間（同じ場所に明示的に記載されているか、6か月や1年などの期間が記載されているか）",
     "対象製品に有効期限が明示的に指定されていないかどうか",
     "スクリーンセーバー設定...",
-    "カレンダースクリーンセーバーで使用するカルチャを設定できます"
+    "カレンダースクリーンセーバーで使用するカルチャを設定できます",
+    "切り替える構成インスタンスを選択してください。",
+    "構成を選択",
+    "構成インスタンスの選択を求められます。",
+    "ベースカーネル構成が指定されていない場合、構成変数をチェックできません。",
+    "カーネル構成は正しく動作しません。詳細についてはカーネルデバッガーを参照してください。",
+    "キーが指定されていない場合、構成変数をチェックできません。",
+    "無効な内容のカスタム設定を登録しようとしています。詳細についてはカーネルデバッガーを参照してください。",
+    "無効な内容のベース設定を登録しようとしています。詳細についてはカーネルデバッガーを参照してください。",
+    "エントリを選択してください",
+    "構成を選択できません",
+    "1 つ以上の構成エントリに無効な変数または列挙型が含まれているため、修正する必要があります。詳細についてはカーネルデバッガーを参照してください。"
   ]
 }
