--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4205,6 +4205,17 @@
     "تاريخ الانتهاء أو الفترة الزمنية (سواءً مكتوبة صراحةً في نفس المكان أو فترات زمنية، مثل 6 أشهر أو سنة واحدة)",
     "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟",
     "إعدادات شاشة التوقف...",
-    "يتيح لك هذا تهيئة الثقافة المستخدمة في شاشة توقف التقويم."
+    "يتيح لك هذا تهيئة الثقافة المستخدمة في شاشة توقف التقويم.",
+    "حدد مثيل تكوين للتبديل إليه.",
+    "حدد التكوين",
+    "يُطالبك باختيار مثيل تكوين",
+    "لا يمكن التحقق من متغيرات التكوين عند عدم تحديد تكوين أساسي للنواة.",
+    "لن يعمل تكوين النواة بشكل صحيح. راجع مصحح أخطاء النواة لمزيد من المعلومات.",
+    "لا يمكن التحقق من متغيرات التكوين عند عدم تحديد مفاتيح.",
+    "جاري محاولة تسجيل إعداد مخصص بمحتوى غير صالح. راجع مصحح أخطاء النواة لمزيد من المعلومات.",
+    "جاري محاولة تسجيل إعداد أساسي بمحتوى غير صالح. راجع مصحح أخطاء النواة لمزيد من المعلومات.",
+    "اختر مُدخلاً لـ",
+    "لا يمكن تحديد التكوين",
+    "يحتوي واحد أو أكثر من مُدخلات التكوين على متغيرات أو تعدادات غير صالحة ويحتاج إلى إصلاح. راجع مصحح أخطاء النواة لمزيد من المعلومات."
   ]
 }
