--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
@@ -4205,6 +4205,17 @@
     "yutong gihan ttoneun gigan(gat-eun wichie myeongsijeog-eulo gijae ttoneun 6gaewol ttoneun 1nyeongwa gat-eun gigan)",
     "daesang jepum-i yutong gihan-eul myeongsijeog-eulo jijeonghaji anhneunji yeobu",
     "seukeulinseibeo seoljeong...",
-    "kaellindeo seukeulinseibeoeseo sayongdoeneun munhwaleul guseonghal su issseubnida."
+    "kaellindeo seukeulinseibeoeseo sayongdoeneun munhwaleul guseonghal su issseubnida.",
+    "jeonhwanhal guseong inseuteonseuleul seontaeghaseyo.",
+    "guseong seontaeg",
+    "guseong inseuteonseuleul seontaeghalaneun mesijiga pyosidoebnida.",
+    "gibon keoneol guseong-i jijeongdoeji anh-eun gyeong-u guseong byeonsuleul hwag-inhal su eobs-seubnida.",
+    "keoneol guseong-i jedaelo jagdonghaji anhseubnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo.",
+    "kiga jijeongdoeji anh-eun gyeong-u guseong byeonsuleul hwag-inhal su eobs-seubnida.",
+    "jalmosdoen kontencheulo sayongja jijeong seoljeong-eul deungloghalyeogo habnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo.",
+    "jalmosdoen kontencheulo gibon seoljeong-eul deungloghalyeogo habnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo.",
+    "hangmog-eul seontaeghaseyo.",
+    "guseong-eul seontaeghal su eobs-seubnida.",
+    "hana isang-ui guseong hangmog-e jalmosdoen byeonsu ttoneun yeolgeohyeong-i iss-eo sujeonghaeya habnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo."
   ]
 }
