--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4205,6 +4205,17 @@
     "Термін придатності або період часу (або чітко вказано в тому самому місці, або проміжки часу, наприклад 6 місяців або 1 рік)",
     "Чи в цільовому продукті не вказано чітко термін придатності",
     "Налаштування заставки...",
-    "Це дозволяє налаштувати культуру, яку використовує заставка календаря"
+    "Це дозволяє налаштувати культуру, яку використовує заставка календаря",
+    "Виберіть екземпляр конфігурації для переходу.",
+    "Виберіть конфігурацію",
+    "Пропонує вибрати екземпляр конфігурації",
+    "Неможливо перевірити змінні конфігурації, якщо не вказано базову конфігурацію ядра.",
+    "Конфігурація ядра не працюватиме належним чином. Зверніться до налагоджувача ядра для отримання додаткової інформації.",
+    "Неможливо перевірити змінні конфігурації, якщо не вказано ключі.",
+    "Спроба зареєструвати спеціальне налаштування з недійсним вмістом. Зверніться до налагоджувача ядра для отримання додаткової інформації.",
+    "Спроба зареєструвати базове налаштування з недійсним вмістом. Зверніться до налагоджувача ядра для отримання додаткової інформації",
+    "Виберіть запис для",
+    "Не вдається вибрати конфігурацію",
+    "Один або кілька записів конфігурації містять недійсні змінні або перерахування, і їх потрібно виправити. Зверніться до налагоджувача ядра для отримання додаткової інформації."
   ]
 }
