fix - Fixed missing translation
---

We've fixed missing translation for a string related to the product expiry
checker command.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ita.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ita.json
@@ -4419,6 +4419,7 @@
     "Data di produzione",
     "Data di scadenza",
     "Intervallo di scadenza",
+    "Salute del prodotto",
     "Stato del prodotto",
     "Impossibile ottenere le informazioni sulla scadenza del prodotto",
     "Ottiene le informazioni sulla scadenza del prodotto",
@@ -4428,7 +4429,6 @@
     "Seleziona un'istanza di configurazione a cui passare.",
     "Impossibile selezionare la configurazione",
     "Seleziona configurazione",
-    "Ti chiede di selezionare un'istanza di configurazione",
-    "Prompts you to select a configuration instance"
+    "Ti chiede di selezionare un'istanza di configurazione"
   ]
 }
