add - Added new localizations
---

We've added localizations for the settings selection.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4429,6 +4429,7 @@
     "حدد نسخة تكوين للتبديل إليها.",
     "لا يمكن تحديد التكوين",
     "حدد التكوين",
-    "يُطلب منك تحديد نسخة تكوين"
+    "يُطلب منك تحديد نسخة تكوين",
+    "إعدادات شاشة التوقف..."
   ]
 }
