--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4429,6 +4429,7 @@
     "hadad nuskhat takwin liltabdil 'iilayha.",
     "la yumkin tahdid altakwin",
     "hadad altakwin",
-    "yutlb mink tahdid nuskhat takwin"
+    "yutlb mink tahdid nuskhat takwin",
+    "'iiedadat shashat altawaqufi..."
   ]
 }
