--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4429,6 +4429,7 @@
     "Xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
     "Wúfǎ xuǎnzé pèizhì",
     "xuǎnzé pèizhì",
-    "tíshì nín xuǎnzé pèizhì shílì"
+    "tíshì nín xuǎnzé pèizhì shílì",
+    "Yíngmù bǎohù chéngshì shèdìng..."
   ]
 }
