--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
@@ -4429,6 +4429,7 @@
     "Selecteer een configuratie-instantie om naar over te schakelen.",
     "Kan configuratie niet selecteren",
     "Configuratie selecteren",
-    "Vraagt u een configuratie-instantie te selecteren"
+    "Vraagt u een configuratie-instantie te selecteren",
+    "Schermbeveiligingsinstellingen..."
   ]
 }
