--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
@@ -4429,6 +4429,7 @@
     "Sélectionnez une instance de configuration vers laquelle basculer.",
     "Impossible de sélectionner la configuration",
     "Sélectionner la configuration",
-    "Vous invite à sélectionner une instance de configuration."
+    "Vous invite à sélectionner une instance de configuration.",
+    "Paramètres de l'économiseur d'écran..."
   ]
 }
