--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
@@ -4429,6 +4429,7 @@
     "Wählen Sie eine Konfigurationsinstanz zum Wechseln aus.",
     "Konfiguration kann nicht ausgewählt werden.",
     "Konfiguration auswählen.",
-    "Sie werden aufgefordert, eine Konfigurationsinstanz auszuwählen."
+    "Sie werden aufgefordert, eine Konfigurationsinstanz auszuwählen.",
+    "Bildschirmschonereinstellungen..."
   ]
 }
