--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4429,6 +4429,7 @@
     "Επιλέξτε ένα στιγμιότυπο διαμόρφωσης για μετάβαση.",
     "Δεν είναι δυνατή η επιλογή διαμόρφωσης",
     "Επιλέξτε διαμόρφωση",
-    "Σας ζητά να επιλέξετε μια παρουσία διαμόρφωσης"
+    "Σας ζητά να επιλέξετε μια παρουσία διαμόρφωσης",
+    "Ρυθμίσεις προφύλαξης οθόνης..."
   ]
 }
