--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4429,6 +4429,7 @@
     "svich karane ke lie konfigareshan instens chunen.",
     "konfigareshan nahin chuna ja sakata",
     "konfigareshan chunen",
-    "aapako konfigareshan instens chunane ke lie sanket deta hai"
+    "aapako konfigareshan instens chunane ke lie sanket deta hai",
+    "skreenasevar setings..."
   ]
 }
