--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
@@ -4429,6 +4429,7 @@
     "Roghnaigh sampla cumraíochta le haistriú chuige.",
     "Ní féidir cumraíocht a roghnú",
     "Roghnaigh cumraíocht",
-    "Spreagann tú sampla cumraíochta a roghnú"
+    "Spreagann tú sampla cumraíochta a roghnú",
+    "Socruithe spárálaíscáileáin..."
   ]
 }
