--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ita.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ita.json
@@ -4429,6 +4429,7 @@
     "Seleziona un'istanza di configurazione a cui passare.",
     "Impossibile selezionare la configurazione",
     "Seleziona configurazione",
-    "Ti chiede di selezionare un'istanza di configurazione"
+    "Ti chiede di selezionare un'istanza di configurazione",
+    "Impostazioni dello screensaver..."
   ]
 }
