--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
@@ -4429,6 +4429,7 @@
     "jeonhwanhal guseong inseuteonseuleul seontaeghaseyo.",
     "guseong-eul seontaeghal su eobs-seubnida.",
     "guseong-eul seontaeghaseyo.",
-    "guseong inseuteonseuleul seontaeghalaneun mesijiga pyosidoebnida."
+    "guseong inseuteonseuleul seontaeghalaneun mesijiga pyosidoebnida.",
+    "seukeulinseibeo seoljeong..."
   ]
 }
