--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4429,6 +4429,7 @@
     "Configurationis exempli gratia ad flectendum est.",
     "Non potest eligere configuratione",
     "Configuratione Select",
-    "Monet te eligere configuratione exempli"
+    "Monet te eligere configuratione exempli",
+    "Screensaver occasus..."
   ]
 }
