--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ndo.json
@@ -4429,6 +4429,7 @@
     "Pilih contoh konfigurasi yang ingin dialihkan.",
     "Tidak dapat memilih konfigurasi",
     "Pilih konfigurasi",
-    "Meminta Anda untuk memilih contoh konfigurasi"
+    "Meminta Anda untuk memilih contoh konfigurasi",
+    "Pengaturan screensaver..."
   ]
 }
