--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
@@ -4429,6 +4429,7 @@
     "Velg en konfigurasjonsforekomst å bytte til.",
     "Kan ikke velge konfigurasjon",
     "Velg konfigurasjon",
-    "Ber deg velge en konfigurasjonsforekomst"
+    "Ber deg velge en konfigurasjonsforekomst",
+    "Skjermsparerinnstillinger..."
   ]
 }
