--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ptg.json
@@ -4429,6 +4429,7 @@
     "Selecione uma instância de configuração para alternar.",
     "Não é possível selecionar a configuração",
     "Selecione a configuração",
-    "Solicita que selecione uma instância de configuração"
+    "Solicita que selecione uma instância de configuração",
+    "Definições do protetor de ecrã..."
   ]
 }
