--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
@@ -4429,6 +4429,7 @@
     "Selectați o instanță de configurare la care să comutați.",
     "Nu se poate selecta configurația",
     "Selectați configurația",
-    "Vă solicită să selectați o instanță de configurare"
+    "Vă solicită să selectați o instanță de configurare",
+    "Setări pentru screensaver..."
   ]
 }
