--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
@@ -4429,6 +4429,7 @@
     "Geçiş yapmak için bir yapılandırma örneği seçin.",
     "Yapılandırma seçilemiyor",
     "Yapılandırmayı seçin",
-    "Bir yapılandırma örneği seçmenizi ister"
+    "Bir yapılandırma örneği seçmenizi ister",
+    "Ekran koruyucu ayarları..."
   ]
 }
