--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4429,6 +4429,7 @@
     "Виберіть екземпляр конфігурації для переходу.",
     "Не вдається вибрати конфігурацію",
     "Виберіть конфігурацію",
-    "Пропонує вибрати екземпляр конфігурації"
+    "Пропонує вибрати екземпляр конфігурації",
+    "Налаштування заставки..."
   ]
 }
