--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
@@ -4429,6 +4429,7 @@
     "Chọn một phiên bản cấu hình để chuyển sang.",
     "Không thể chọn cấu hình",
     "Chọn cấu hình",
-    "Nhắc bạn chọn một phiên bản cấu hình"
+    "Nhắc bạn chọn một phiên bản cấu hình",
+    "Cài đặt trình bảo vệ màn hình..."
   ]
 }
