--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
@@ -4429,6 +4429,7 @@
     "Selecione uma instância de configuração para alternar.",
     "Não é possível selecionar a configuração",
     "Selecionar configuração",
-    "Solicita que você selecione uma instância de configuração"
+    "Solicita que você selecione uma instância de configuração",
+    "Configurações do protetor de tela..."
   ]
 }
