--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
@@ -4429,6 +4429,7 @@
     "स्विच करने के लिए कॉन्फ़िगरेशन इंस्टेंस चुनें।",
     "कॉन्फ़िगरेशन नहीं चुना जा सकता",
     "कॉन्फ़िगरेशन चुनें",
-    "आपको कॉन्फ़िगरेशन इंस्टेंस चुनने के लिए संकेत देता है"
+    "आपको कॉन्फ़िगरेशन इंस्टेंस चुनने के लिए संकेत देता है",
+    "स्क्रीनसेवर सेटिंग्स..."
   ]
 }
