--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4429,6 +4429,7 @@
     "切り替える構成インスタンスを選択してください。",
     "構成を選択できません",
     "構成を選択してください",
-    "構成インスタンスを選択するように求められます"
+    "構成インスタンスを選択するように求められます",
+    "スクリーンセーバーの設定..."
   ]
 }
