--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
@@ -4429,6 +4429,7 @@
     "전환할 구성 인스턴스를 선택하세요.",
     "구성을 선택할 수 없습니다.",
     "구성을 선택하세요.",
-    "구성 인스턴스를 선택하라는 메시지가 표시됩니다."
+    "구성 인스턴스를 선택하라는 메시지가 표시됩니다.",
+    "스크린세이버 설정..."
   ]
 }
