--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/spa.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/spa.json
@@ -4429,6 +4429,7 @@
     "Seleccione una instancia de configuración a la que cambiar.",
     "No se puede seleccionar la configuración.",
     "Seleccionar configuración.",
-    "Se le solicita que seleccione una instancia de configuración."
+    "Se le solicita que seleccione una instancia de configuración.",
+    "Configuración del protector de pantalla..."
   ]
 }
